--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Udacity-Capstone-Project</title> 
+    <title>Udacity-Capstone-Project - Cloud Devops</title> 
 </head>
 <body>
     <h2>Nguyen Thanh Long</h2>
