--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,7 +7,9 @@
     <title>Udacity-Capstone-Project - Cloud Devops</title> 
 </head>
 <body>
+    <h1>Udacity-Capstone-Project - Cloud Devops</h1>
     <h2>Nguyen Thanh Long</h2>
-    <h3>version: 1.0</h3>
+    <h3>version: 2.0</h3>
+    <img src="https://unsplash.com/photos/the-sun-is-setting-over-the-city-skyline-eRcjQb45ZYs">
 </body>
 </html>
