--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,11 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Udacity-Capstone-Project - Cloud Devops</title> 
+
+    <style>
+        .center {
+            width: 50%;
+            margin-right: auto;
+            display: block;
+            margin-left: auto;
+
+        }
+    </style>
 </head>
 <body>
     <h1>Udacity-Capstone-Project - Cloud Devops</h1>
     <h2>Nguyen Thanh Long</h2>
-    <h3>version: 2.0</h3>
-    <img src="https://unsplash.com/photos/the-sun-is-setting-over-the-city-skyline-eRcjQb45ZYs">
+    <h3>version: 3.0</h3>
+    <img src="https://images.unsplash.com/photo-1691158429157-452d88254002?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" class="center">
 </body>
 </html>
